{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 58,
  "lineage": "8e33d080-07e2-433d-b364-861487fd9808",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gfgigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377007663:internet-gateway/igw-0386672e9b4f1e2de",
            "id": "igw-0386672e9b4f1e2de",
            "owner_id": "891377007663",
            "tags": {
              "Name": "gfg-igw"
            },
            "tags_all": {
              "Name": "gfg-igw"
            },
            "vpc_id": "vpc-0d12839cbc0954ab4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gfgRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377007663:route-table/rtb-0cef5bf50fdf804b5",
            "id": "rtb-0cef5bf50fdf804b5",
            "owner_id": "891377007663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0386672e9b4f1e2de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gfg-route-table"
            },
            "tags_all": {
              "Name": "gfg-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d12839cbc0954ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gfgigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gfg_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14e60973cb2b3fb",
            "route_table_id": "rtb-0cef5bf50fdf804b5",
            "subnet_id": "subnet-0ccdfcb200b25fde4"
          },
          "dependencies": [
            "aws_internet_gateway.gfgigw",
            "aws_route_table.gfgRouteTable",
            "aws_subnet.mysubnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysggfg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377007663:security-group/sg-0b69803b797826319",
            "description": "Allow inbound traffic",
            "egress": [],
            "id": "sg-0b69803b797826319",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 83,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 83
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "891377007663",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d12839cbc0954ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377007663:subnet/subnet-0ccdfcb200b25fde4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccdfcb200b25fde4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377007663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gfg-subnet1"
            },
            "tags_all": {
              "Name": "gfg-subnet1"
            },
            "vpc_id": "vpc-0d12839cbc0954ab4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377007663:vpc/vpc-0d12839cbc0954ab4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054952acfd61d916e",
            "default_route_table_id": "rtb-0fbcd2eb04fcb93db",
            "default_security_group_id": "sg-015221823f97aa30f",
            "dhcp_options_id": "dopt-0587b38ea46762b74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d12839cbc0954ab4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbcd2eb04fcb93db",
            "owner_id": "891377007663",
            "tags": {
              "Name": "gfg-vpc"
            },
            "tags_all": {
              "Name": "gfg-vpc"
            }
          }
        }
      ]
    }
  ]
}